@@ -1,4 +1,4 @@
-@import url("common.css?1");
+@import url("common.css?2");
 
 body { margin: 0px; padding: 0px; color: black; }
 #specialform { display: inline; }
@@ -94,4 +94,3 @@ a.stub, #quickbar a.stub { color:#772233; text-decoration:none; }
 a.new, #quickbar a.new { color: #CC2200; }
 h2, h3, h4, h5, h6 { margin-bottom: 0; }
 small { font-size: 75%; }
-
